name:           hasbolt-extras
version:        0.0.0.1
synopsis:       Extras for hasbolt library
description:    Extras for hasbolt library
homepage:       https://github.com/biocad/hasbolt-extras#readme
bug-reports:    https://github.com/biocad/hasbolt-extras/issues
author:         Bogdan Neterebskii, Vladimir Morozov, Sofya Kochkova
maintainer:     bog2dan1@gmail.com
copyright:      (c) 2018, BIOCAD
stability:      experimental
category:       Database
license:        BSD3
license-file:   LICENSE
build-type:     Simple
cabal-version:  >= 1.10

extra-source-files: CHANGELOG.md
                    README.md

source-repository head
  type: git
  location: https://github.com/biocad/hasbolt-extras

library
  hs-source-dirs:   src
  exposed-modules:  
  other-modules:    
  build-depends:    base >=4.7 && <5
                  , text
                  , aeson
                  , deepseq
                  , hasbolt
                  , containers
                  , neat-interpolation
                  , template-haskell
                  , th-lift-instances
                  , lens
                  , data-default
  ghc-options:     -Wall -O2
  default-language: Haskell2010
